# screencut

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: color_wnd.cc  color_wnd.h  commons.h  constants.h  graphs_draw.cc  graphs_draw.h  graphs_util.cc  graphs_util.h  resource.h  screencut.rc  screencut_win.cc  screencut_wnd.cc  screencut_wnd.h  stdafx.cpp  tool_wnd.cpp  tool_wnd.h  toolbar_wnd.cc  toolbar_wnd.h  wnd_impl.cc  wnd_impl.h
